Fixed bug with image image height gettings set to 0 on mobile?

--- a/css/main.scss
+++ b/css/main.scss
@@ -352,7 +352,7 @@
   .itemOverlay {
     @include opacity(0.6);
     display: none;
-    height: 280px;
+    height: 281px;
     width: 100%;
     background-color: white;
     position: absolute;
