--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -401,7 +401,7 @@ a:visited {
   opacity: 0.6;
   filter: alpha(opacity=60);
   display: none;
-  height: 280px;
+  height: 281px;
   width: 100%;
   background-color: white;
   position: absolute;
